--- a/index.html
+++ b/index.html
@@ -65,67 +65,68 @@
                 >
               </div>
             </div>
+            <div class="header" id="header">
+              <h2>CSET - 105 <span>Projects Entire Week</span></h2>
+            </div>
+            <br>
+              <div class="card lazy-background" id="card">
+                <div class="card-img card3"></div>
+                <div class="card-text">
+                  <h2>Project 1</h2>
+                  <p>Grocery list manager</p>
+                  <br />
+                </p>
+                  <br />
+                  <p>November 2024</p>
+                </div>
+                <div class="card-buttons">
+                  <a
+                    href="grocer-list-105-project1/index.html"
+                    target="_blank"
+                    class="demo"
+                    ><i class="far fa-eye"></i> Demo</a
+                  >
+                  <a
+                    href="https://github.com/AlexSeisler/CSET-semester1/tree/main/CSet105/Weekly%20Assignment%202/grocer-list-105-project1"
+                    target="_blank"
+                    class="code"
+                    ><i class="fas fa-code"></i> Code</a
+                  >
+                </div>
+              </div>
+
+              <div class="card lazy-background" id="card">
+                <div class="card-img card3"></div>
+                <div class="card-text">
+                  <h2>Project 1</h2>
+                  <p>Grocery list manager</p>
+                  <br />
+                </p>
+                  <br />
+                  <p>November 2024</p>
+                </div>
+                <div class="card-buttons">
+                  <a
+                    href="grocer-list-105-project1/index.html"
+                    target="_blank"
+                    class="demo"
+                    ><i class="far fa-eye"></i> Demo</a
+                  >
+                  <a
+                    href="https://github.com/AlexSeisler/CSET-semester1/tree/main/CSet105/Weekly%20Assignment%202/grocer-list-105-project1"
+                    target="_blank"
+                    class="code"
+                    ><i class="fas fa-code"></i> Code</a
+                  >
+                </div>
+              </div>
+            
+
+
           </div>
       </section>
 
-      <section id="projects">
-        <div class="header" id="header">
-          <h2>CSET - 105<span>Entire Week</span></h2>
-        </div>
+      
 
-          <div class="container reveal lazy-background">
-            <div class="card lazy-background" id="card">
-              <div class="card-img card1"></div>
-              <div class="card-text">
-                <h2>AProject 1</h2>
-                <p>Grocery list manager</p>
-                <br />
-              </p>
-                <br />
-                <p>November 2024</p>
-              </div>
-              <div class="card-buttons">
-                <a
-                  href="grocer-list-105-project1/index.html"
-                  target="_blank"
-                  class="demo"
-                  ><i class="far fa-eye"></i> Demo</a
-                >
-                <a
-                  href=""
-                  target="_blank"
-                  class="code"
-                  ><i class="fas fa-code"></i> Code</a
-                >
-              </div>
-            </div>
-
-            <div class="card lazy-background" id="card">
-              <div class="card-img card2"></div>
-              <div class="card-text">
-                <h2>Assignment 2</h2>
-                <p>Colorful Buttons</p>
-                <br />
-              </p>
-                <br />
-                <p>November 2024</p>
-              </div>
-              <div class="card-buttons">
-                <a
-                  href="buttons10-assignment2/index.html"
-                  target="_blank"
-                  class="demo"
-                  ><i class="far fa-eye"></i> Demo</a
-                >
-                <a
-                  href="https://github.com/AlexSeisler/CSET-semester1/tree/main/CSet105/Weekly%20Assignment%202/buttons10-assignment2"
-                  target="_blank"
-                  class="code"
-                  ><i class="fas fa-code"></i> Code</a
-                >
-              </div>
-            </div>
-          </div>
-      </section>
 </body>
 </html>
