--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
               <div class="card lazy-background" id="card">
                 <div class="card-img card3"></div>
                 <div class="card-text">
-                  <h2>Project 1</h2>
-                  <p>Grocery list manager</p>
+                  <h2>Project 2</h2>
+                  <p>Quiz Game</p>
                   <br />
                 </p>
                   <br />
@@ -107,13 +107,13 @@
                 </div>
                 <div class="card-buttons">
                   <a
-                    href="grocer-list-105-project1/index.html"
+                    href="quiz-105-project2/index.html"
                     target="_blank"
                     class="demo"
                     ><i class="far fa-eye"></i> Demo</a
                   >
                   <a
-                    href="https://github.com/AlexSeisler/CSET-semester1/tree/main/CSet105/Weekly%20Assignment%202/grocer-list-105-project1"
+                    href=""
                     target="_blank"
                     class="code"
                     ><i class="fas fa-code"></i> Code</a
