--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </div>
 
               <div class="card lazy-background" id="card">
-                <div class="card-img card3"></div>
+                <div class="card-img card4"></div>
                 <div class="card-text">
                   <h2>Project 2</h2>
                   <p>Quiz Game</p>
@@ -113,7 +113,7 @@
                     ><i class="far fa-eye"></i> Demo</a
                   >
                   <a
-                    href=""
+                    href="https://github.com/AlexSeisler/CSET-semester1/tree/main/CSet105/Weekly%20Assignment%202/quiz-105-project2"
                     target="_blank"
                     class="code"
                     ><i class="fas fa-code"></i> Code</a
