--- a/quiz-105-project2/index.html
+++ b/quiz-105-project2/index.html
@@ -17,6 +17,7 @@
 
         <button onclick="checkAnswerAndNext()"id="nextQuestionButton">Next Question</button>
         <div id="scoreDisplay" style="margin-top: 20px;"></div>
+        <button id="reset" onclick="reloadPage()">Reload Page</button>
     </div>
 </body>
 </html>
